--- a/index.html
+++ b/index.html
@@ -14,29 +14,10 @@
 
         </ul>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
-    <script>
-        SameSite = 'None';
-        Secure
 
-    </script>
-    <script>
-        $.ajax({
-            url: 'https://github.com/alexanderkopke/philobuddy/blob/master/quotes.json',
-            data: {
-                format: 'json'
-            },
-            error: function() {
-                console.log('error, error!')
-            },
-            dataType: 'jsonp',
-            success: function(data) {
-                console.log('sucess, oh god jesus buddha, whomever!! Thank you!')
-            },
-            type: 'GET'
-        })
 
-    </script>
+
+    </script src="idk.js">
 </body>
 
 </html>
