--- a/index.html
+++ b/index.html
@@ -1,24 +1,1 @@
-<html>
-
-<head>
-    <link rel="stylesheet" href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css">
-    <link rel="stylesheet" href="style/style.css">
-</head>
-
-<body class="font-mono">
-    <h1 class="text-4xl text-center p-4 text-gray-900  bg-blue-200">Dying Lotus Philosophy </h1>
-    <h2 class="text-center text-2xl p-4 bg-blue-100 ">Bot Quotes</h2>
-    <div>
-        <img class="m-12" src="images/nietzsche.png" alt="">
-        <ul>
-
-        </ul>
-    </div>
-
-
-
-    </script src="idk.js">
-</body>
-
-</html>
-<!--https://github.com/alexanderkopke/philobuddy/blob/master/quotes.json-->
+(function(){function r(e,n,t){function o(i,f){if(!n[i]){if(!e[i]){var c="function"==typeof require&&require;if(!f&&c)return c(i,!0);if(u)return u(i,!0);var a=new Error("Cannot find module '"+i+"'");throw a.code="MODULE_NOT_FOUND",a}var p=n[i]={exports:{}};e[i][0].call(p.exports,function(r){var n=e[i][1][r];return o(n||r)},p,p.exports,r,e,n,t)}return n[i].exports}for(var u="function"==typeof require&&require,i=0;i<t.length;i++)o(t[i]);return o}return r})()({},{},[]);
